fix to cellspacing and cellpadding with arrow icon

--- a/qti-1.2/src/themes/pearsonvue/css/style.css
+++ b/qti-1.2/src/themes/pearsonvue/css/style.css
@@ -21,7 +21,7 @@ b, strong {
 }
 
 /*item {*/
-    /*zoom: 140%;*/
+/*zoom: 140%;*/
 /*}*/
 
 .qti-assessment {
@@ -84,59 +84,67 @@ resprocessing {
 
 table {
     border-collapse: separate;
-    border: none;
-    border: 0px solid rgba(0,0,0,0);
+    border: 0px solid rgba(0, 0, 0, 0);
+}
+
+table .sort-indicator {
+    position: absolute;
+    right: 4px;
+}
+
+table th {
+    position: relative;
 }
 
 table[rules=all] {
-    border: 1px solid grey;
+    border: 1px solid #C0C0C0;
 }
 
 table[rules=rows] tr {
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid #C0C0C0;
 }
 
 table[rules=rows] tr:last-child {
     border-bottom: none;
-    border-bottom: 0px solid rgba(0,0,0,0);
+    border-bottom: 0px solid rgba(0, 0, 0, 0);
 }
 
 table[rules=cols] th, table[rules=cols] td {
-    border-left: 1px solid grey;
-    border-right: 1px solid grey;
+    border-left: 1px solid #C0C0C0;
+    border-right: 1px solid #C0C0C0;
 }
 
 table[frame=above] {
-    border-top: 1px solid grey;
+    border-top: 1px solid #C0C0C0;
 }
 
 table[frame=below] {
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid #C0C0C0;
 }
 
 table[frame=lhs] {
-    border-left: 1px solid grey;
+    border-left: 1px solid #C0C0C0;
 }
 
 table[frame=rhs] {
-    border-right: 1px solid grey;
+    border-right: 1px solid #C0C0C0;
 }
 
 table[frame=hsides] {
-    border-left: 1px solid grey;
-    border-right: 1px solid grey;
+    border-left: 1px solid #C0C0C0;
+    border-right: 1px solid #C0C0C0;
 }
 
 table[frame=vsides] {
-    border-top: 1px solid grey;
-    border-bottom: 1px solid grey;
+    border-top: 1px solid #C0C0C0;
+    border-bottom: 1px solid #C0C0C0;
 }
 
 table[frame=box] {
-    border-top: 1px solid grey;
-    border-bottom: 1px solid grey;
-    border-left: 1px solid grey;
-    border-right: 1px solid grey;
+    border-top: 1px solid #C0C0C0;
+    border-bottom: 1px solid #C0C0C0;
+    border-left: 1px solid #C0C0C0;
+    border-right: 1px solid #C0C0C0;
 }
 
 table[rules=cols] th:first-child,
@@ -144,7 +152,7 @@ table[rules=cols] th:last-child,
 table[rules=cols] td:first-child,
 table[rules=cols] td:last-child {
     border-left: none;
-    border-right: 0px solid rgba(0,0,0,0);
+    border-right: 0px solid rgba(0, 0, 0, 0);
 }
 
 thead {
